Chat bubble border-radius changed to 2em. Overflow fixed

--- a/src/Components/ChatBubble.scss
+++ b/src/Components/ChatBubble.scss
@@ -16,7 +16,7 @@
   align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  border-radius: 999.9em
+ border-radius:2em;
 }
 
 .chat-bubble-animation{
